# live-wave-function-collapse

./: .gitignore  cliff4.blend  cliff4.blend1  cliff4_hills.blend  cliff4_hills.blend1  cliff5.blend1  cliff6.blend1  project.godot  prototype_data.json  wfc_modules.glb
_game/: heightmap.tres  normalmap.tres  placementmap.tres
blend/: adjacency.py  axes.blend  cliff3.blend  cliff4.blend  cliff5.blend  cliff6.blend  cliff6.glb  cliff7.blend  cliff7.blend1  fix_boundaries.py  fix_boundaries_spacing.py  move_all.py
godot/: .gitignore  LWFC.gdextension  cliff3.blend1  cliff4_hills.blend1  cliff7.blend1  export_presets.cfg  grass.mtl  grid.blend1  project.godot  prototype_data.json  wfc_modules.glb
python/: life.py
resources/: foliage_shader_G4alpha10.tres  grass.glb  grass_material.tres  grass_model.glb  grass_shader.tres  ground.tres  heightmap.tres  rock.tres  slot_highlight_material.tres
rust/: Cargo.toml  README.md
rust/src/: chunk.rs  collapser.rs  driver.rs  lib.rs  map.rs  models.rs  slot.rs  worker.rs
rust/src/manager/: manager.rs  map_director.rs  map_validator.rs  mod.rs  models.rs  worker_pool.rs
rust/src/map/: chunk.rs  mod.rs  models.rs
rust/src/models/: cell_change.rs  collapser_action.rs  collapser_state.rs  driver_update.rs  library.rs  manager.rs  map.rs  mod.rs  phone.rs  prototype.rs  worker.rs
rust/src/worker/: cell.rs  chunk.rs  chunk_test.rs  collapser.rs  library.rs  manager.rs  map.rs  map_director.rs  mod.rs  models.rs  slot.rs  worker.rs  worker_pool.rs
scenes/: Controls.gd  Controls.tscn  HistoryEntry.tscn  Main.tscn  Map.tscn  (+9 more)
(+119 files in other folders)
